--- a/INSTRUCTIONS.mdx
+++ b/INSTRUCTIONS.mdx
@@ -1,6 +1,6 @@
-# Dynamic Rendering (Cache options)
+# Streaming (Loading et Skeleton)
 
-### 💡 Comprendre le rendu dynamique avec cache de data
+### 💡 Comprendre le Streaming
 
 ## 📝 Tes notes
 
@@ -8,59 +8,125 @@ Detaille ce que tu as appris ici, sur une page [Notion](https://go.mikecodeu
 
 ## Comprendre
 
-Il existe d’autres méthodes pour effectuer des rendus dynamiques. Une assez utile est en modifiant les options de cache des données.
+Dans ce module, nous abordons le rendu streaming, une technique qui permet de rendre progressivement l'interface utilisateur côté serveur.
 
-`fetch` requests are **not** cached if:
+Cette approche découpe le travail en segments, les diffusant au client dès qu'ils sont prêts. Ainsi, l'utilisateur peut visualiser des parties de la page immédiatement, même si tout le contenu n'est pas encore complètement rendu.
 
-- The `cache: 'no-store'` is added to `fetch` requests.
-- The `revalidate: 0` option is added to individual `fetch` requests.
-- The `fetch` request is inside a Router Handler that uses the `POST` method.
-- The `fetch` request comes after the usage of `headers` or `cookies`.
-- The `const dynamic = 'force-dynamic'` route segment option is used.
-- The `fetchCache` route segment option is configured to skip cache by default.
-- The `fetch` request uses `Authorization` or `Cookie` headers and there's an uncached request above it in the component tree.
+Le streaming intégré au routeur d'application de Next.js améliore la performance de chargement initial des pages et facilite l'affichage d'interfaces dépendant de récupérations de données lentes.
 
-📑 Le liens vers la doc https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#opting-out-of-data-caching
+Séquentiel vs Paralell :
+![server-rendering-without-streaming-chart.avif](/course/sequential-parallel-data-fetching.avif)
+
+Partiel content
+![server-rendering-without-streaming-chart.avif](/course/server-rendering-with-streaming.avif)
+
+📑 Le liens vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/server-components#streaming](https://nextjs.org/docs/app/building-your-application/rendering/server-components#streaming)
 
 ## Exercice
 
-Dans cet exercice tu vas devoir faire un rendu dynamique en utilisant la fonction [noStore](https://nextjs.org/docs/app/api-reference/functions/unstable_noStore)
+Dans cet exercice nous avons des composants (RSC) qui sont long à charger (plusieurs secondes).
+
+- `<ProductList>` —> 2 secondes
+- `<PostList>` —> 5 secondes
+
+Ces composants sont chargés dans un Dashboard sur le segment de route : [/exercises/streaming](http://localhost:3000/exercises/streaming)
+
+![streaming-exca.png](/course/streaming-exca.png)
+
+**👨‍✈️ Hugo le chef de projet** demande de rendre le contenu du `dashboard` ([/exercises/streaming](http://localhost:3000/exercises/streaming)) non bloquant (comme c’est le cas actuellement).
+
+### Pourquoi est bloquant :
+
+Pour comprendre pourquoi c’est bloquant, il est utile de comprendre le rendu côté serveur (SSR) et ses limites.
+
+Avec le SSR, plusieurs étapes doivent être complétées avant que l'utilisateur puisse voir et interagir avec une page :
+
+- **Récupération des données :** Toutes les données pour une page donnée sont récupérées sur le serveur.
+- **Rendu HTML :** Le serveur génère le HTML pour la page.
+- **Envoi au client :** Le HTML, le CSS et le JavaScript de la page sont envoyés au client.
+- **Affichage initial :** Une interface utilisateur non interactive est affichée à l'aide du HTML et du CSS générés.
+- **Hydratation par React :** Enfin, React hydrate l'interface utilisateur pour la rendre interactive.
+
+![server-rendering-without-streaming-chart.avif](/course/server-rendering-without-streaming-chart.avif)
+Comme le fetching de data serveur et rendrering peut être long Next permet d’avoir un fichier `loading.tsx` au niveau du segment de route, cela permet d’avoir un FCP rapide.
+
+📑 Voir la doc : https://nextjs.org/docs/app/building-your-application/routing/loading-ui-and-streaming
+
+🐶 Dans cet exercice tu vas devoir créer un fichier `loading.tsx` au niveau de la route afin d’afficher un Skeleton le temps que toutes les données soit chargées
+
+```tsx
+import {Skeleton} from '@/components/ui/skeleton'
+...
+<div className="m-4 mx-auto max-w-4xl p-6 text-lg">
+  <Skeleton className="m-4  h-[325px] rounded-xl" />
+  <div className="m-4 space-y-2">
+    <Skeleton className="h-4" />
+    <Skeleton className="h-4 " />
+  </div>
+</div>
+```
 
 Fichiers
 
-- `/exercises/dynamic-rendering/cache-options/page.tsx`
+- `src/app/exercises/streaming/loading.tsx`
 
 ## Bonus
 
-### 1. 🚀 force-dynamique
+### 1. 🚀 Amélioration (Streaming avec Suspense)
 
-Il existe une option de route pour rendre le contenu dynamique.
+Avoir un composant de chargement permet de rendre la page non bloquante mais il faut toujours attendre le chargement complet des composants pour avoir l’affichage complet.
+
+- `<ProductList>` —> 2 secondes
+- `<PostList>` —> 5 secondes
+
+Le streaming permet d’avoir accès aux composants directement lorsqu'il sont disponible.
+
+Pour cela il faut les composant dans un `Suspense` exemple :
 
 ```tsx
-export const dynamic = 'force-dynamic'
+import { Suspense } from 'react'
+import { PostFeed, Weather } from './Components'
+
+export default function Posts() {
+  return (
+    <section>
+      <Suspense fallback={<p>Loading feed...</p>}>
+        <PostFeed />
+      </Suspense>
+      <Suspense fallback={<p>Loading weather...</p>}>
+        <Weather />
+      </Suspense>
+    </section>
+  )
+}
 ```
 
-**🐶** Utilise `force-dynamic` pour faire du rendu dynamique
+📑 Doc Suspense https://react.dev/reference/react/Suspense
+
+🐶 Dans cet exercice, utilise `suspense` pour afficher des`squeleton` le temps que les composants soient accessibles
+
+Constate que le `loading` n’est plus nécessaire
 
 Fichiers
 
-- `/exercises/dynamic-rendering/cache-options/page.tsx`
+- `src/app/exercises/streaming/page.tsx`
 
-### 2. 🚀 revalidate
+### 2. 🚀 Streaming et `loading.tsx`
 
-Utilise une [revalidation basé sur le temps](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation)
+Simule un accès long au données de la page du `dashboard` (ce qui peut arriver si des données sont lentes à charger sur la page principale)
 
 ```tsx
-export const revalidate = 0
+const username = 'Mike Codeur'
+await new Promise((resolve) => setTimeout(resolve, 1000))
 ```
 
 Fichiers
 
-- `/exercises/dynamic-rendering/cache-options/page.tsx`
+- `src/app/exercises/streaming/page.tsx`
 
 ## Aller plus loin
 
-📑 Le lien vers la doc [https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation](https://nextjs.org/docs/app/building-your-application/data-fetching/fetching-caching-and-revalidating#time-based-revalidation)
+📑 Le lien vers la doc [https://nextjs.org/docs/app/building-your-application/rendering/server-components#streaming](https://nextjs.org/docs/app/building-your-application/rendering/server-components#streaming)
 
 ## Ils vont t’aider
 
@@ -72,8 +138,4 @@ Fichiers
 
 ## 🐜 Feedback
 
-Remplir le formulaire le formulaire de FeedBack.
-
-```jsx
-https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=Rendering%20Avancée&entry.533578441=04%20dynamic-rendering-cache
-```
+Remplir le formulaire le [formulaire de FeedBack](https://go.mikecodeur.com/cours-next-avis?entry.1912869708=Next%20PRO&entry.1430994900=Rendering%20Avancée&entry.533578441=05%20streaming).
